app/ui/general/Games.module.css
.games {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  margin-top: 5rem;
  max-width: 900px;
  margin: 2rem auto;
  @media (max-width: 900px) {
    padding: 0 1rem;
  }
}

.games li {
  background: var(--card-background);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  min-height: 40px;
  padding: 1rem;
  position: relative;
}

.games li small {
  font-size: 0.75rem;
  color: var(--color-primary);
}

.games li small.dlc {
  font-size: 0.75rem;
  color: white;
  display: flex;
  gap: 0.5rem;
}

.dlcUncomplete {
  opacity: 0.5;
}

